--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                           </div>
                           <div class="col-md-12 text-center my-3">
                             <div class="loading">Loading</div>
-<!--                             
+                            <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
