--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       Park, Kakkanchery, Malappuam-District. My Domain is MERN Stack.
                     </p>
                     <p class="lead">
-                      I complted B.Tech  graduatuion in Compute Science and Engineering from Government College of Engineering, Kannur in the period of
+                      I completed B.Tech  graduation in Computer Science and Engineering from Government College of Engineering, Kannur in the period of
                       2016-2020. 
                     </p>
                     <p class="lead">
