--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     </section><!-- Academic Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -489,36 +489,41 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Drop Me Message 
+                        Drop Me a Message 
                       </h5>
                     </div>
                     <div>
-                      <form onsubmit="sendMail()" method="post" role="form" class="php-email-form">
+                      <form  method="post" role="form" class="php-email-form" id="form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name">
+                              <div class="error" style="color: red;"></div>
                             </div>
                           </div>
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                              <input type="text" class="form-control" name="email" id="email" placeholder="Your Email">
+                              <div class="error" style="color: red;"></div>
                             </div>
                           </div>
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+                              <div class="error" style="color: red;"></div>
                             </div>
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" id="message" placeholder="Message" required></textarea>
+                              <textarea class="form-control" name="message" rows="5" id="message" placeholder="Message" ></textarea>
+                              <div class="error" style="color: red;"></div>
                             </div>
                           </div>
                           <div class="col-md-12 text-center my-3">
                             <div class="loading">Loading</div>
-                            <div class="error-message"></div>
+                            <!-- <div class="error-message"></div> -->
                             <div class="sent-message">Your message has been sent. Thank you!</div>
+                            <div class="error" style="color: red;"></div>
                           </div>
                           <div class="col-md-12 text-center">
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
