Changed Bg color and Some contents

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Vishnu</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer, Designer, Freelancer, Photographer, Artist"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer, Web Designer, Freelancer, Photographer, Artist"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -82,12 +82,13 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Vishnu KP</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Web Developer</span></p>
+                        <!-- <p><span class="title-s">Name: </span> <span>Vishnu KP</span></p> -->
+                        <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
                         <p><span class="title-s">Email: </span> <span>vishnukp2529@gmail.com</span></p>
-                        <p><span class="title-s">LinkedIn: </span> <a href="https://www.linkedin.com/in/vishnu-kp-467a2a220/">vishnu-kp-467a2a220/</a></p>
+                        <p><span class="title-s">LinkedIn: </span> <a href="https://www.linkedin.com/in/vishnukp-info/">vishnu-kp-467a2a220/</a></p>
                         <p><span class="title-s">Guthub: </span> <a href="https://github.com/vishnukp29">vishnukp29</a></p>
                         <p><span class="title-s">Phone: </span> <span>+91 7012 118 496</span></p>
+                        <p><span class="title-s">Whatsapp: </span> <span>+91 9995 316 806</span></p>
                       </div>
                     </div>
                   </div>
@@ -97,18 +98,18 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Frond End Development (React JS)</span> <span class="pull-right"></span>
+                    <span>Frond End Development (React JS, Angular)</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Web Designing</span> <span class="pull-right"></span>
+                    <!-- <span>Web Designing</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>Digital Art</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -119,14 +120,18 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hello i am Vishnu. I am a MERN Stack Developer, located at Tirur, Malappuam-District, Kerala.
+                      Hello i am Vishnu. I am a Full Stack Developer, from Tirur, Malappuam, Kerala. I am currently located in
+                      Bengaluru, Karnataka.
                     </p>
                     <p class="lead">
-                      I completed B.Tech  graduation in Computer Science and Engineering from Government College of Engineering, Kannur in the period of
+                      Currently I am a MERN Stack Developer at Dword Core Pvt Ltd, Bengaluru, Karnataka.
+                    </p>
+                    <p class="lead">
+                      I completed B.Tech  graduation in Computer Science and Engineering from Government College of Engineering, Kannur during the period of
                       2016-2020. 
                     </p>
                     <p class="lead">
-                      My other intrests are Photography, Drawing, Logo Designing, Cricket, Gardening etc.
+                      My other intrests are Photography, Logo Designing, Cricket, Gardening etc.
                     </p>
                   </div>
                 </div>
@@ -143,7 +148,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a">
+              <h3 class="title-a" >
                 Services
               </h3>
               <p class="subtitle-a">
@@ -659,9 +664,9 @@
                     <div class="socials">
                       <ul>
                         <li><a href="https://www.facebook.com/vishnu.vishnu.1806"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/wishnu______/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href="https://twitter.com/WishNu2929?t=iM1qOCfGv3wP3j9sbW77lw&s=09"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/vishnu-kp-467a2a220/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/wish.nuhh/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://github.com/vishnukp29"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/vishnukp-info/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -681,14 +686,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <!-- <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p> -->
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
               Designed by <a>Vishnu KP</a>
             </div>
           </div>
